objects/Checklist_Exposicao__c.object
<CustomObject>
    <description>Utilizado para o processo de visitas. Organização e Exposição.</description>
    <fields>
        <fullName>ChecklistARG_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Check List ARG</label>
        <referenceTo>CLV_ChecklistVisita_ARG__c</referenceTo>
        <relationshipLabel>Checklist Organização e Exposição</relationshipLabel>
        <relationshipName>Checklist_Organiza_o_e_Exposi_o</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_de_visita__c</fullName>
        <label>Checklist de visita</label>
        <referenceTo>Checklist_de_visita__c</referenceTo>
        <relationshipLabel>Checklist Organização e Exposição</relationshipLabel>
        <relationshipName>Checklist_Organizacao_e_Exposicao</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentários</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OK?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_C__c</fullName>
        <label>Marcas</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_da_visita_organizacao__c</fullName>
        <formula>Checklist_de_visita__r.Status_da_Visita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>status da visita organizacao</label>
        <type>Text</type>
    </fields>
    <label>Checklist Organização e Exposição</label>
    <nameField>
        <displayFormat>OE-{0}</displayFormat>
        <label>Nome da Organização e Exposição</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Organização e Exposição</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>COE_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>COE_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Nao_alterar_dados_se_visita_encerrada_or</fullName>
        <active>true</active>
        <description>Não é possível alterar com o status da Visita = Encerrada.</description>
        <errorConditionFormula>priorvalue(  status_da_visita_organizacao__c  ) = &quot;Encerrada&quot;</errorConditionFormula>
        <errorDisplayField>Comentarios__c</errorDisplayField>
        <errorMessage>Não é possível alterar com o status da Visita = Encerrada.</errorMessage>
    </validationRules>
</CustomObject>